--- a/activity-browser.desktop
+++ b/activity-browser.desktop
@@ -3,7 +3,7 @@ Name=Activity Browser
 GenericName=Activity Web Browser
 Comment=Browse with a specific profile depending on current KDE activity
 Exec=activity-browser %u
-Icon=web-browser
+Icon=internet-web-browser
 Terminal=false
 Type=Application
 MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;
